--- a/main_app/templates/main_app/home.html
+++ b/main_app/templates/main_app/home.html
@@ -3,7 +3,8 @@
 {% block content %}
 <div class="container-home-page">
 <div class="title-container">
-  <h1>Welcome to PhysiVerse </h1>
+<h1>Welcome to PhysiVerse </h1>
+<p class="tagline">Experience physics. Don't just read it.</p>
 </div>
 <div id="image-wrapper">
 <img src="{% static 'image/home.png' %}" id="specific-image-style">
