--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -9,4 +9,5 @@
   <a href="{% url 'password_reset' %}">Forgot Password?</a>
 </p>
 </form>
+<p style="margin-top: 15 ;  text-align: center;">Don't have an account?<a href="{% url 'signup' %}">Go to Signup</a></p>
 {% endblock %}
